--- a/index.qmd
+++ b/index.qmd
@@ -1,123 +1,118 @@
 ---
-title: "Funciones evolutivas del habla dirigida a bebés"
-subtitle: "Atención, preferencias auditivas y desarrollo infantil"
-author: "Juan David Leongómez"
-format: revealjs
+project:
+  type: website
+output-dir: docs
+format:
+  revealjs:
+    logo: img/logo_preview.svg
+    footer: "Juan David Leongómez <span style='font-size: 70%;'>PhD, MSc</span>"
+    theme: simple
+    center: true
+    slide-number: true
+    transition: fade
+    background-transition: fade
+    self-contained: false
 editor: visual
+toc: false
 ---
 
-# ¿Qué nos dice una voz?
+## Funciones evolutivas del habla dirigida a bebés
 
-![](Logo_proyecto.png)
+::::: columns
+::: {.column width="50%"}
+<br><br>
+<span style="font-size: 60%;">
+Impacto en la atención, las preferencias auditivas y el desarrollo lingüístico y musical temprano
+</span>
+:::
+::: {.column width="50%"}
+<img src="img/logo_preview.svg" width="100%"/>
+:::
+:::::
+
+<span style="font-size: 50%;color:#7ab7a9">
+Juan David Leongómez, Milena Vásquez-Amézquita, Nicolás Ignacio Ramos Rodríguez, María Catalina Bages Mesa, Daniel Toro Avila, Adriana María Cristancho Arévalo, Ruth Stella Chacon Pinilla, Lina Maria Rodríguez Granada, Luz Helena Buitrago León, Natalia Moreno-Buitrago, David A. Puts
+</span>
+
+<br>
+
+<span style="font-size: 70%;">
+Convocatoria Interna - Investigación Avanzada · 2025
+</span>
+
+---
+
+## Habla dirigida a bebés <span style="color:#eb938a;">IDS</span>
+
+<iframe 
+  width="100%" 
+  height="480" 
+  src="https://www.youtube.com/embed/O8ETEajtfUs?start=11" 
+  title="YouTube video player" 
+  frameborder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+  allowfullscreen>
+</iframe>
+
+---
+
+## ¿Qué nos dice una voz? {auto-animate="true"}
+
+---
+
+## ¿Qué nos dice una voz? {auto-animate="true"}
 
 -   Antes de hablar, de caminar o entender palabras, las y los bebés ya **escuchan**.
+
+::: {.fragment .fade-in}
 -   Nacemos preparados para **conectarnos** con quienes nos cuidan.
--   Esa conexión ocurre, en gran parte, a través de una voz especial: el habla dirigida a bebés (IDS).
+:::
+::: {.fragment .fade-in}
+-   Esa conexión ocurre, en gran parte, a través de una voz especial: el habla dirigida a bebés (<span style="color:#eb938a;">IDS</span>).
+:::
 
-> El IDS no solo es “ternura”. Es una herramienta poderosa de comunicación emocional, social y cognitiva.
+---
 
-------------------------------------------------------------------------
+## ¿Qué nos dice una voz? {auto-animate="true" background-image="img/bebe1.png" background-size="cover" background-position="center" background-opacity="0.5"}
 
-# ¿Por qué importa el IDS?
+> El <span style="color:#eb938a;">IDS</span> no solo es "ternura". Es una herramienta poderosa de comunicación emocional, social y cognitiva.
 
--   Mejora el apego y la regulación emocional.
--   Capta la atención del bebé y facilita el aprendizaje del lenguaje.
--   Es **universal**, está presente en casi todas las culturas.
--   Tiene propiedades similares al canto, y puede estar en la raíz evolutiva de la música y el lenguaje.
+---
 
-![](Fig1.png)
+## ¿Por qué importa el <span style="color:#eb938a;">IDS</span>? {auto-animate="true"}
 
-------------------------------------------------------------------------
+---
 
-# Pregunta central
+## ¿Por qué importa el <span style="color:#eb938a;">IDS</span>? {auto-animate="true"}
 
-**¿Cómo influyen las características acústicas del IDS en:**
+-   <span style="color:#7ab7a9;">SUPERVIVENCIA:</span> Mejora el apego y la regulación emocional.
 
--   la atención social temprana,
--   y el desarrollo lingüístico y musical en la infancia?
+::: {.fragment .fade-in}
+-   <span style="color:#eb938a;">DESARROLLO:</span> Capta la atención del bebé y facilita el aprendizaje del lenguaje.
+:::
+::: {.fragment .fade-in}
+-   <span style="color:#7ab7a9;">NECESARIO:</span> Es **universal**, está presente en todas las culturas.
+:::
+::: {.fragment .fade-in}
+  -   <span style="color:#eb938a;">EVOLUCIÓN:</span> Tiene propiedades similares al canto, y puede estar en la raíz evolutiva de la música y el lenguaje.
+:::
 
-------------------------------------------------------------------------
+---
 
-# Diseño general del proyecto
+## ¿Por qué importa el IDS? {auto-animate="true"}
 
-Dos estudios complementarios:
+- Las capacidades de los bebés para seguir la mirada y atender a la boca del interlocutor predicen el crecimiento del vocabulario. <br>[[ Brooks & Meltzoff, 2008](https://doi.org/10.1017/S030500090700829X); [Çetinçelik et al, 2021](https://doi.org/10.3389/fpsyg.2020.589096); [Fernald et al, 2008](https://doi.org/10.1075/lald.44.06fer); [Tenenbaum et al, 2015](https://doi.org/10.1017/S0305000914000725)]{style="font-size: 50%;"}
 
-## Estudio 1
+---
 
--   Bebés de 3–9 meses.
--   Evaluación en laboratorio con eye-tracking, análisis de emociones y ritmo cardíaco.
+## ¿Por qué importa el IDS? {auto-animate="true"}
 
-## Estudio 2
+::::: columns
+::: {.column width="50%"}
+- Puede estar en la base de la evolución de la musicalidad y el lenguage.  <br>[[ Leongómez et al, 2022](https://doi.org/10.1098/rstb.2020.0391)]{style="font-size: 50%;"}
+:::
 
--   Niños/as de 16–23 meses.
--   Análisis de videos caseros + cuestionarios sobre lenguaje y musicalidad.
-
-------------------------------------------------------------------------
-
-# Metodología: Estudio 1
-
--   Diseño factorial 2x2x2 (8 condiciones acústicas).
--   Tamaño muestral: 160 bebés (simulaciones de poder).
--   Medidas:
-    -   Eye-tracking (fijaciones visuales)
-    -   Expresiones emocionales
-    -   Ritmo cardíaco estimado
-
-![](Fig2.png)
-
-------------------------------------------------------------------------
-
-# Eye-tracking y tecnología
-
--   Sistema de rastreo ocular infrarrojo de alta precisión.
--   Validación paralela con cámara web convencional.
--   Exploramos tecnología accesible, **abierta y escalable**.
-
-![](Fig3.png)
-
-------------------------------------------------------------------------
-
-# Inteligencia artificial
-
--   Análisis automático de expresiones faciales y emociones.
--   Estimación del ritmo cardíaco a partir de video (rPPG).
--   Todo usando herramientas de código abierto.
-
-![](Fig4.png)
-
-------------------------------------------------------------------------
-
-# Estudio 2: Seguimiento en el tiempo
-
--   Evaluación del desarrollo lingüístico y musical a los 16–23 meses.
--   Datos recolectados:
-    -   Videos del IDS materno durante el primer año.
-    -   Cuestionarios: CDI y Music\@Home.
--   Muestra estimada: 480 madres.
-
-![](Fig5.png)
-
-------------------------------------------------------------------------
-
-# Impacto esperado
-
--   Contribuye a la ciencia del desarrollo, lenguaje y musicalidad.
--   Aporta evidencia útil para salud materno-infantil y educación inicial.
--   Modelo replicable y abierto, adaptable a diversos contextos.
-
-------------------------------------------------------------------------
-
-# Redes y transferencia
-
--   Apoyo internacional: Penn State, OSU
--   Producción científica (Q1), divulgación pública y apropiación social.
--   Sitio web, podcast, materiales para cuidadores.
-
-![](Fig6.png)
-
-------------------------------------------------------------------------
-
-# ¡Gracias por escuchar!
-
--   ¿Preguntas o comentarios?
--   Contacto: jleongomez\@unbosque.edu.co
+::::: columns
+::: {.column width="50%"}
+<img src="img/modelo.svg" width="100%"/>
+:::
